# homeworks6

./: .gitignore  README.md
Diploma/Airport_inspector/: CMakeLists.txt  database.cpp  database.h  graphload.cpp  graphload.h  graphload.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework 1/HW1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework 2/stopwatch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Homework3/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Homework4/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Homework5/PreTCPclient/: mainwindow.cpp  structs.h  tcpclient.cpp  tcpclient.h
